--- a/src/PixiTest/index.html
+++ b/src/PixiTest/index.html
@@ -4,6 +4,6 @@
         <style> body {padding: 0; margin: 0} </style>
     </head> 
     <body></body>
-    <script src='node_modules/pixi.js/dist/pixi.min.js'></script>
+    <script src='../../node_modules/pixi.js/dist/pixi.min.js'></script>
     <script src='index.js'></script>
 </html>
