--- a/src/PixiTest/index.html
+++ b/src/PixiTest/index.html
@@ -1,9 +1,11 @@
 <html>
     <head>
         <title>PixiTest</title>
-        <style> body {padding: 0; margin: 0} </style>
+        <link rel='stylesheet' href='../../styles/style.css'>
     </head> 
     <body></body>
     <script src='../../node_modules/pixi.js/dist/pixi.min.js'></script>
-    <script src='index.js'></script>
+    
 </html>
+<script src='../backButton.js'></script>
+<script src='index.js'></script>
