--- a/src/bubbleGen/index.html
+++ b/src/bubbleGen/index.html
@@ -1,10 +1,11 @@
 <html>
   <head>
-    <meta charset="UTF-8">
-    <script language="javascript" type="text/javascript" src="../../node_modules/p5/lib/p5.min.js"></script>
-    <script language="javascript" type="text/javascript" src="sketch.js"></script>
-    <script language="javascript" type="text/javascript" src="bubble.js"></script>
-    <style> body {padding: 0; margin: 0;} </style>
+    <meta charset='UTF-8'>
+    <link rel='stylesheet' href='../../styles/style.css'>
+    <script language='javascript' type='text/javascript' src='../../node_modules/p5/lib/p5.min.js'></script>
+    <script language='javascript' type='text/javascript' src='sketch.js'></script>
+    <script language='javascript' type='text/javascript' src='bubble.js'></script>
   </head>
   <body></body>
 </html>
+<script language='javascript' type='text/javascript' src='../backButton.js'></script>
