case sensitive changes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Scraps</title>
-        <link rel='stylesheet' href='../styles/style.css'>
+        <link rel='stylesheet' href='styles/style.css'>
         <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
     </head> 
     <body>
